// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionsManagerContract on addCollateral from positionsManager 1`] = `
[
  {
    "$seq": 5,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{DDED1FE8800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A2E90EDD000000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 11744n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "empty",
            },
            "bounce": false,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQA8J7zdze7xzxWC0UEFLI_ebJedZgQbQuay8b9oAkTSWQkO",
            "type": "internal",
            "value": 987256000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on repayStablecoin from positionsManager with healthy position 1`] = `
[
  {
    "$seq": 11,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{BEF31E07800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000000000000C8000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13471n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{B065C3AC800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C8203_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
            "type": "internal",
            "value": 498577000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 12,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 497577000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7461n,
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on repayStablecoin from positionsManager with healthy position revert if debt less than amount 1`] = `
[
  {
    "$seq": 9,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{BEF31E07800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2000000000000012C000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13471n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{B065C3AC800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B232C203_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
            "type": "internal",
            "value": 498577000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 10,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 497577000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7461n,
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on setPositionId from positionsManager should set positionId and deploy positionAddress contract 1`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{4A35F9D0800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000000000000000000000000000000000000000000000000000000000000017}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20413n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{5DA6DE96800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B30038624485C1C5A7D230C9BA517A920766FBB742166801EB1E23472C9779391CBEE_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCe9rE3xPdst3hC14pLYI445Rop9zC6414J3Dar2QoLJmVd",
            "type": "internal",
            "value": 966560000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on stablecoin burned  1`] = `
[
  {
    "$seq": 13,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{EA319D9C800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C8203_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13265n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{ED81304A800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000000000000C80000000000000003_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 398473000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on witdrawStablecoin from positionsManager should revert unhealthy position 1`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{4A35F9D0800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000000000000000000000000000000000000000000000000000000000000017}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20413n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{5DA6DE96800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B30038624485C1C5A7D230C9BA517A920766FBB742166801EB1E23472C9779391CBEE_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCe9rE3xPdst3hC14pLYI445Rop9zC6414J3Dar2QoLJmVd",
            "type": "internal",
            "value": 966560000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 4,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCe9rE3xPdst3hC14pLYI445Rop9zC6414J3Dar2QoLJmVd",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 959406000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7461n,
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on withdraw collateral decrease position collateral  1`] = `
[
  {
    "$seq": 15,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{CB461808800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C8000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13714n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{C3CD33BF800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000000000000C9_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 98537000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on withdraw collateral revert if more than exists  1`] = `
[
  {
    "$seq": 14,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{CB461808800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B232C000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13714n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{C3CD33BF800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2000000000000012D_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 98537000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on withdrawStablecoin from positionsManager with healthy position 1`] = `
[
  {
    "$seq": 7,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{6C3989BB800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000004A817C800000000020000000200000002000000027735940000000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 35875n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{903559B2800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A04A817C801_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
            "type": "internal",
            "value": 98557000n,
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{96096519800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000004A817C801_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 962662000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 8,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 97557000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7461n,
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on withdrawStablecoin from positionsManager with unhealthy position 1`] = `
[
  {
    "$seq": 6,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{6C3989BB800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2000001D1A94A2000000000020000000200000002000000027735940000000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "failed",
        "errorCode": 43504,
        "errorMessage": "position will not be healthy",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "type": "internal",
          "value": 974036000n,
        },
      },
    ],
  },
]
`;

exports[`PositionsManagerContract should deploy correctly and send newPositionId request to positionsManager 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 16029n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{0D74C595800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B3_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 98601000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQDhiRIXBxafSMMm6UXqSB2b7t0IWaAHrHiNHLJd5ORy-0BR",
          "type": "internal",
          "value": 97601000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7461n,
      },
    ],
  },
]
`;
